--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
+    "vue-router": "4",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
